<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:gravity="center|center_vertical"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="259dp"
            android:src="@drawable/p"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TableRow
            android:layout_width="363dp"
            android:layout_height="42dp"
            android:gravity="center">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btniniciar"
                android:textColor="#00B0FF"
                android:textIsSelectable="false"
                app:backgroundTint="@color/white" />

            <Space
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/btnregistrar"
                android:textColor="#00B0FF"
                app:backgroundTint="@color/white" />
        </TableRow>

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:inputType="textPersonName"
            android:text="@string/txtnombre" />

        <EditText
            android:id="@+id/txtfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/txtfecha"
            android:inputType="date" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cbmasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cbmasculino"
                android:textColorHighlight="@color/white"
                android:textColorLink="@color/white"
                app:buttonTint="#F6F1F1" />

            <Space
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/cbfemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cbfemenino"
                android:textColorHighlight="@color/white"
                android:textColorLink="@color/white"
                app:buttonTint="#F8F3F3" />
        </TableRow>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/txtemail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/txtcontrasena"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="irInicio"
            android:text="@string/btningresa"
            android:textColor="#00B0FF"
            android:textColorLink="#00E5FF"
            app:backgroundTint="@color/white" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/g"
                app:backgroundTint="#F44336"
                app:icon="@drawable/g" />

            <Space
                android:layout_width="27dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/fb"
                app:backgroundTint="#3D5AFE"/>


        </TableRow>

    </LinearLayout>

</LinearLayout>