<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Ventana2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#3D5AFE"
        android:gravity="center">

        <ImageButton
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:background="#3D5AFE"
            android:scaleType="centerInside"
            tools:srcCompat="@tools:sample/avatars" />

        <Space
            android:layout_width="26dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="72dp"
            android:layout_height="29dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txtusuario"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Space
            android:layout_width="76dp"
            android:layout_height="29dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="49dp"
            android:layout_height="29dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txtnivel"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </TableRow>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/txtcategoria"
            android:textColor="@color/black"
            android:textSize="34sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="109dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="138dp"
            android:layout_height="111dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/deportes" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="140dp"
            android:layout_height="111dp"
            android:background="@color/white"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/cine" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ciencia" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="138dp"
            android:layout_height="111dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/deportes" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="140dp"
            android:layout_height="111dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/cine" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ciencia" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="138dp"
            android:layout_height="111dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/deportes" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="140dp"
            android:layout_height="111dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/cine" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ciencia" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="163dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#3D5AFE"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:background="#3D5AFE"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/trofeo" />

        <Space
            android:layout_width="44dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="62dp"
            android:layout_height="47dp"
            android:background="#3D5AFE"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ranking" />
    </TableRow>

</LinearLayout>